Anonymous | Login | 2021-01-15 20:10 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031333 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2020-01-29 21:21 | 2020-12-02 17:12 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031333: Data Exchange - RWGltf_TriangulationReader::readBuffer() fails to read interleaved buffer at the end of file | ||||||||
Description | Reading interleaved buffer at the end of file leads to error due to no padding bytes. This is because Standard_ReadBuffer defines end of stream as Stride*Count, while tail might be cut to element size for the last element. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|||||||||||
|
![]() |
|
(0090208) git (administrator) 2020-01-30 17:14 |
Branch CR31333 has been created by kgv. SHA-1: 0f90b9842910a9a7d00b9eb170a4e3c5e92c2c39 Detailed log of new commits: Author: kgv Date: Thu Jan 30 17:10:29 2020 +0300 0031333: Data Exchange - RWGltf_TriangulationReader::readBuffer() fails to read interleaved buffer at the end of file Standard_ReadBuffer has been extended with a flag for reading an interleaved data. RWGltf_TriangulationReader::readBuffer() uses new flag for reading vertex attributes. |
(0090212) kgv (developer) 2020-01-30 19:06 |
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31333-master-KGV/view/COMPARE/ [^] |
(0090332) git (administrator) 2020-02-06 09:53 |
Branch CR31333 has been updated forcibly by kgv. SHA-1: 97e7e8bb540b254a980b9b93e7769d2dea03e28a |
(0090397) bugmaster (administrator) 2020-02-07 14:07 |
Tested in framework of WEEK-6: Combination - OCCT branch : WEEK-6 master SHA - 8b3fbdef34aed600927f10a8d58b56824ca8070d fe4497f3246e6bc1ced97ac331c148f0809ded15 Products branch : WEEK-6 SHA - af75a25bca53d4cfce0059a706fc86799d3c1182 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17009.640000000178 / 16997.920000000046 [+0.07%] Products Total CPU difference: 12143.5600000001 / 12129.400000000101 [+0.12%] Windows-64-VC14: OCCT Total CPU difference: 18438.515625 / 18439.75 [-0.01%] Products Products Total CPU difference: 12143.5600000001 / 12129.400000000101 [+0.11%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0090415) git (administrator) 2020-02-08 13:29 |
Branch CR31333 has been deleted by inv. SHA-1: 97e7e8bb540b254a980b9b93e7769d2dea03e28a |
![]() |
|||
occt: master e2550e48
Timestamp: 2020-01-30 14:10:29 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0031333: Data Exchange - RWGltf_TriangulationReader::readBuffer() fails to read interleaved buffer at the end of file Standard_ReadBuffer has been extended with a flag for reading an interleaved data. RWGltf_TriangulationReader::readBuffer() uses new flag for reading vertex attributes. |
||
mod - src/RWGltf/RWGltf_TriangulationReader.cxx | [ Diff ] [ File ] | ||
mod - src/Standard/Standard_ReadBuffer.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-01-29 21:21 | kgv | New Issue | |
2020-01-29 21:21 | kgv | Assigned To | => kgv |
2020-01-29 21:21 | kgv | Relationship added | related to 0031332 |
2020-01-29 21:21 | kgv | Relationship added | child of 0030691 |
2020-01-30 17:14 | git | Note Added: 0090208 | |
2020-01-30 19:06 | kgv | Note Added: 0090212 | |
2020-01-30 19:06 | kgv | Assigned To | kgv => osa |
2020-01-30 19:06 | kgv | Status | new => resolved |
2020-02-06 09:53 | git | Note Added: 0090332 | |
2020-02-06 09:53 | kgv | Assigned To | osa => bugmaster |
2020-02-06 09:53 | kgv | Status | resolved => reviewed |
2020-02-06 18:03 | bugmaster | Test case number | => Not required |
2020-02-07 14:07 | bugmaster | Note Added: 0090397 | |
2020-02-07 14:07 | bugmaster | Status | reviewed => tested |
2020-02-08 13:00 | bugmaster | Changeset attached | => occt master e2550e48 |
2020-02-08 13:00 | bugmaster | Status | tested => verified |
2020-02-08 13:00 | bugmaster | Resolution | open => fixed |
2020-02-08 13:29 | git | Note Added: 0090415 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |